<?xml version="1.0"?>
<package format="2">
  <name>usv_package</name>
  <version>1.0.0</version>
  <description>This is the ROS package that controls the USV in MBZIRC 2024</description>
  <maintainer email="cptkk@qq.com">kk</maintainer>
  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>threading</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>open3d</build_depend>
  <build_depend>itertools</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>threading</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>open3d</build_export_depend>
  <build_export_depend>itertools</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>open3d</exec_depend>
  <exec_depend>itertools</exec_depend>
 
  <export>
  </export>
</package>
